--- a/BinarySearchTree/BinarySearchTree/BinarySearchTree.csproj
+++ b/BinarySearchTree/BinarySearchTree/BinarySearchTree.csproj
@@ -52,6 +52,7 @@
     <Compile Include="binarySearchTree.Designer.cs">
       <DependentUpon>binarySearchTree.cs</DependentUpon>
     </Compile>
+    <Compile Include="BTreePrinter.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
